tests/ui/parser/raw/raw-str-delim.rs
static s: &'static str =
    r#~"#"~# //~ ERROR found invalid character; only `#` is allowed in raw string delimitation
;

// ferrocene-annotations: fls_usr6iuwpwqqh
// Raw String Literals
